# CSE-687-update

./: CMakeLists.txt  FileManager.cpp  GuiApp.cpp  GuiApp_Phase3.cpp  How to run the program.txt  MapDLL.cpp  MapReduceController.cpp  MapReduceController.h  Mapper.cpp  P3_FileManager.cpp  P3_FileManager.h  P3_Logger.cpp  P3_Mapper.cpp  P3_Reducer.cpp  README.md  Reducer.cpp  Workflow.cpp  Workflow_old.cpp  main_cli.cpp
dlls/: ReduceDLL.cpp
include/mr/: FileManager.hpp  Interfaces.hpp  Logger.hpp  Mapper.hpp  PluginContexts.hpp  PluginLoader.hpp  Reducer.hpp  Types.hpp  Workflow.hpp
input/: sample1.txt
src/: FileManager.cpp  GuiApp.cpp  Logger.cpp  Logger.h  MapReduceController.cpp  Mapper.cpp  Mapper.h  Reducer.cpp  Reducer.h
